# cable_driven_robot

./: .README.md.swp  README.md  ReadMe.md
br_motor_driver/: CMakeLists.txt  CMakeLists.txt~  README.md  README.md~  package.xml  package.xml~
br_motor_driver/config/: robot_parameters.yaml  robot_parameters.yaml~
br_motor_driver/include/br_motor_driver/: br_robot.h
br_motor_driver/launch/: br_driver.launch  br_driver.launch~  br_driver_sim.launch  br_driver_sim.launch~
br_motor_driver/results/: friction_7  friction_8
br_motor_driver/scripts/: br_joint_gui.py  br_joint_gui.py~
br_motor_driver/src/: br_robot.cpp  br_robot.cpp~  friction_identification.cpp  robot_simulator.cpp  ros_driver.cpp  ros_driver.cpp~
br_motor_driver/traj/: Exp_1.yaml~  Exp_2.yaml
cable_rob/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
cable_rob/config/: cable.rviz
cable_rob/include/cable_rob/: cable_robot_controller.h~  controller_class.h  controller_class.h~
cable_rob/launch/: LaunchFiles~  br_driver.launch~  br_driver_sim.launch~  br_rviz.launch~
cable_rob/msg/: CartesianTrajectory.msg  CartesianTrajectoryPoint.msg  CartesianTrajectoryPoint.msg~  Cartesiantrajectory.msg~  cable_msgs.msg~  motor_fb_msg.msg  plc_geometry_msg.msg  plc_geometry_msg~  robot_cables_msgs.msg  ros_geometry_msg.msg
cable_rob/scripts/: joint_states_gui.py~  tf_with_joint_gui.py  tf_with_joint_gui.py~
cable_rob/src/: br_controller.cpp  br_controller.cpp~  cartesian_controller.cpp  cartesian_controller.cpp~  controller_class.cpp  controller_class.cpp~  rviz_visual.cpp  rviz_visual.cpp~  tahir_torque_ctrl.cpp  tahir_torque_ctrl.cpp~  tahir_torque_ctrl_latest_working.cpp  tahir_torque_ctrl_latest_working.cpp~  tf_estim.cpp  tf_estim.cpp~  tf_estim_reduced.cpp  tf_estim_reduced.cpp~  trajectory_controller.cpp  trajectory_controller.cpp~
cable_rob/traj/: Attachement_points.yaml  Exp_2.yaml~
